# django-runserveronhostname

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
runserveronhostname/: apps.py  hostfile_parser.py
runserveronhostname/management/commands/: _runserver.py  hostfile.py
tests/: __init__.py  conftest.py  settings.py  test_appconfig.py  test_hostfile_command.py  test_hostfile_parser.py  test_integration.py  test_partial_runserver_command.py  test_patched_load_command_class.py
